nog een extra toevoeging

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    hello
+    <h1>Hello there!</h1>
+    <ul>
+      <li>top</li>
+      <li>iets minder</li>
+      <li>kan beter</li>
+      <li>super slecht</li>
+    </ul>
   </body>
 </html>
